examples/test/testpolicy4171.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4171
  namespace: namespace394
spec:
  podSelector:
    matchLabels:
      key0: value23
      key10: value23
      key36: value2
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key3: value23
          key6: value29
          key42: value47
      podSelector:
        matchLabels:
          key31: value21
